--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -462,14 +462,19 @@
   "api.ticket.ticketDocumentGenerationTask.STATUS_IS_ALREADY_ERROR": "The task has already completed with an error",
   "api.ticket.updateResidentTicket.TICKET_NOT_FOUND": "Cannot find Ticket with id \"{ticketId}\" for current user",
   "api.user.CAPTCHA_CHECK_FAILED": "The operation could not be completed. Please update the application",
+  "api.user.DAILY_REQUEST_LIMIT_FOR_EMAIL_REACHED": "Too many requests with this email. Try again later",
   "api.user.DAILY_REQUEST_LIMIT_FOR_IP_REACHED": "Too many requests from this ip address. Try again later",
   "api.user.DAILY_REQUEST_LIMIT_FOR_PHONE_REACHED": "Too many requests with this phone. Try again later",
+  "api.user.DAILY_REQUEST_LIMIT_FOR_USER_REACHED": "You are sending too many requests. Try again later",
   "api.user.INVALID_PASSWORD_LENGTH": "Password length must be between {min} and {max} characters",
   "api.user.PASSWORD_CONSISTS_OF_SMALL_SET_OF_CHARACTERS": "Password must contain at least {min} different characters",
   "api.user.PASSWORD_CONTAINS_EMAIL": "Password must not contain email",
   "api.user.PASSWORD_CONTAINS_PHONE": "Password must not contain phone",
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "This password is weak or too obvious please choose something more secure",
   "api.user.TOO_MANY_REQUESTS": "You have to wait {secondsRemaining} sec. to be able to send request again",
+  "api.user.TOTAL_REQUEST_LIMIT_FOR_EMAIL_REACHED": "Too many requests with this email. Try again later",
+  "api.user.TOTAL_REQUEST_LIMIT_FOR_PHONE_REACHED": "Too many requests with this phone. Try again later",
+  "api.user.TOTAL_REQUEST_LIMIT_FOR_USER_REACHED": "You are sending too many requests. Try again later",
   "api.user.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Unable to verify your phone number. Try again or ask our support",
   "api.user.WRONG_PASSWORD_FORMAT": "Password must be in string format",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Wrong phone or password",
@@ -718,18 +723,18 @@
   "employee.emptyList.description": "Your employer has blocked you from the organization",
   "employee.emptyList.title": "You are blocked",
   "employee.isBlocked": "blocked",
-  "employee.reassignTickets.title": "Who to assign the employee's tickets to?",
+  "employee.reassignTickets.alert.message": "To avoid losing them, assign a new executor among the employees. You can not reassign requests and simply delete the employee.",
+  "employee.reassignTickets.alert.title": "{employeeName} is assigned to multiple tickets",
   "employee.reassignTickets.buttonContent.deleteUser": "Remove employee without reassignment",
   "employee.reassignTickets.buttonContent.reassignTickets": "Delete employee and reassign requests",
-  "employee.reassignTickets.alert.title": "{employeeName} is assigned to multiple tickets",
-  "employee.reassignTickets.alert.message": "To avoid losing them, assign a new executor among the employees. You can not reassign requests and simply delete the employee.",
-  "employee.reassignTickets.notification.title.warning": "Do not close the tab",
-  "employee.reassignTickets.notification.title.error": "An error occurred",
-  "employee.reassignTickets.notification.title.success": "Ready",
-  "employee.reassignTickets.notification.message.warning": "Reassigning requests to another employee",
   "employee.reassignTickets.notification.message.error": "Please try again later",
   "employee.reassignTickets.notification.message.success": "The employee has been removed and his requests have been reassigned to another employee.",
+  "employee.reassignTickets.notification.message.warning": "Reassigning requests to another employee",
   "employee.reassignTickets.notification.progress": "Tickets reassigned: {updatedTicketsCount} out of {activeTicketsOrganizationEmployeeCount}",
+  "employee.reassignTickets.notification.title.error": "An error occurred",
+  "employee.reassignTickets.notification.title.success": "Ready",
+  "employee.reassignTickets.notification.title.warning": "Do not close the tab",
+  "employee.reassignTickets.title": "Who to assign the employee's tickets to?",
   "employee.role.Administrator.description": "The administrator has full access to the data and functions of the Doma.ai platform: he can delete, create or edit anything he wants. Administrators control the created organizations. An organization can have an unlimited number of administrators.",
   "employee.role.Administrator.name": "Administrator",
   "employee.role.Contractor.description": "The contractor performs work according to the assigned tickets. He does not have access to other sections and features of the Doma.ai platform.",
@@ -1002,6 +1007,11 @@
   "field.UnitName.notFound": "There is no map for this property, so you can not choose the unit",
   "field.UnitName.notFound.link": "Add map",
   "field.UnitType": "Unit type",
+  "field.UnitType.act.apartment": "Apartment",
+  "field.UnitType.act.commercial": "Commercial unit",
+  "field.UnitType.act.flat": "Flat",
+  "field.UnitType.act.parking": "Parking place",
+  "field.UnitType.act.warehouse": "Warehouse",
   "field.UnitType.apartment": "Apartment",
   "field.UnitType.commercial": "Commercial unit",
   "field.UnitType.flat": "Flat",
@@ -1012,11 +1022,6 @@
   "field.UnitType.prefix.parking": "PP",
   "field.UnitType.prefix.warehouse": "WH",
   "field.UnitType.warehouse": "Warehouse unit",
-  "field.UnitType.act.warehouse": "Warehouse",
-  "field.UnitType.act.apartment": "Apartment",
-  "field.UnitType.act.commercial": "Commercial unit",
-  "field.UnitType.act.flat": "Flat",
-  "field.UnitType.act.parking": "Parking place",
   "field.email.requiredError": "Enter email",
   "field.floorName": "Floor",
   "field.required": "This field is required — please fill it out",
@@ -1757,14 +1762,6 @@
   "pages.condo.error.PageTitle": "Improving service",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Can't detect payment link type. Maybe link was corrupted or copied partially.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Unknown payment link",
-  "pages.condo.marketplace.measure.perHour.full": "Hourly rate",
-  "pages.condo.marketplace.measure.perHour.short": "h",
-  "pages.condo.marketplace.measure.perItem.full": "Per item",
-  "pages.condo.marketplace.measure.perItem.short": "pcs",
-  "pages.condo.marketplace.measure.perMeter.full": "Per meter",
-  "pages.condo.marketplace.measure.perMeter.short": "m",
-  "pages.condo.marketplace.noMeasure": "One time payment",
-  "pages.condo.marketplace.marketItem.form.field.measure": "Rate",
   "pages.condo.marketplace.bankAccountErrorMessage": "Bank account validation failed",
   "pages.condo.marketplace.bankAccountValidationErrorMassage": "Please, check that tin, bic and account number are correct ({number}, {routingNumber})",
   "pages.condo.marketplace.bankAccountValidationErrorTitle": "Bank account add failed",
@@ -1879,6 +1876,7 @@
   "pages.condo.marketplace.marketItem.form.field.description.tooltip": "Describe the service: what it includes, how long it will take and what guarantee for the work. Indicate if the resident needs to prepare in advance. Note the advantages - for example, the presence of a contract, the experience of the master and what he will clean up.",
   "pages.condo.marketplace.marketItem.form.field.marketCategory": "Sub category",
   "pages.condo.marketplace.marketItem.form.field.marketItemPhoto": "Item photo",
+  "pages.condo.marketplace.marketItem.form.field.measure": "Rate",
   "pages.condo.marketplace.marketItem.form.field.name": "Name",
   "pages.condo.marketplace.marketItem.form.field.name.uniqueError": "Service with this name is already exists",
   "pages.condo.marketplace.marketItem.form.field.parentCategory": "Category",
@@ -1906,6 +1904,13 @@
   "pages.condo.marketplace.marketItem.mobileAppPreview.title": "This is how it looks in the Doma mobile app",
   "pages.condo.marketplace.marketItem.notFoundError.description": "No market item with such ID in your organization",
   "pages.condo.marketplace.marketItem.notFoundError.title": "Market item not found",
+  "pages.condo.marketplace.measure.perHour.full": "Hourly rate",
+  "pages.condo.marketplace.measure.perHour.short": "h",
+  "pages.condo.marketplace.measure.perItem.full": "Per item",
+  "pages.condo.marketplace.measure.perItem.short": "pcs",
+  "pages.condo.marketplace.measure.perMeter.full": "Per meter",
+  "pages.condo.marketplace.measure.perMeter.short": "m",
+  "pages.condo.marketplace.noMeasure": "One time payment",
   "pages.condo.marketplace.notSetup.buttonText": "Go to setup",
   "pages.condo.marketplace.notSetup.tag": "Not set up",
   "pages.condo.marketplace.notSetup.text": "Let's set them up right now?",
