--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -462,14 +462,19 @@
   "api.ticket.ticketDocumentGenerationTask.STATUS_IS_ALREADY_ERROR": "La tarea ya se ha completado con un error",
   "api.ticket.updateResidentTicket.TICKET_NOT_FOUND": "No se ha encontrado la solicitud con id \"{ticketId}\" para el usuario actual",
   "api.user.CAPTCHA_CHECK_FAILED": "No se ha podido completar la operación. Por favor, actualice la aplicación",
+  "api.user.DAILY_REQUEST_LIMIT_FOR_EMAIL_REACHED": "Demasiadas solicitudes con este correo electrónico. Inténtalo de nuevo más tarde",
   "api.user.DAILY_REQUEST_LIMIT_FOR_IP_REACHED": "Demasiadas solicitudes desde esta dirección ip. Inténtelo de nuevo más tarde",
   "api.user.DAILY_REQUEST_LIMIT_FOR_PHONE_REACHED": "Demasiadas solicitudes desde este teléfono. Inténtelo de nuevo más tarde",
+  "api.user.DAILY_REQUEST_LIMIT_FOR_USER_REACHED": "Estás enviando demasiadas solicitudes. Inténtalo más tarde",
   "api.user.INVALID_PASSWORD_LENGTH": "La longitud de la contraseña debe estar entre {min} y {max} caracteres",
   "api.user.PASSWORD_CONSISTS_OF_SMALL_SET_OF_CHARACTERS": "La contraseña debe contener al menos {min} caracteres diferentes",
   "api.user.PASSWORD_CONTAINS_EMAIL": "La contraseña no puede ser similar al correo electrónico",
   "api.user.PASSWORD_CONTAINS_PHONE": "La contraseña no puede ser similar al número de teléfono",
   "api.user.PASSWORD_IS_FREQUENTLY_USED": "La contraseña es demasiado simple. Debería usar algo más seguro",
   "api.user.TOO_MANY_REQUESTS": "Espere {secondsRemaining} segundo, para volver a enviar la solicitud",
+  "api.user.TOTAL_REQUEST_LIMIT_FOR_EMAIL_REACHED": "Demasiadas solicitudes con este correo electrónico. Inténtalo de nuevo más tarde",
+  "api.user.TOTAL_REQUEST_LIMIT_FOR_PHONE_REACHED": "Demasiadas solicitudes con este teléfono. Inténtalo de nuevo más tarde",
+  "api.user.TOTAL_REQUEST_LIMIT_FOR_USER_REACHED": "Estás enviando demasiadas solicitudes. Inténtalo de nuevo más tarde",
   "api.user.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "No se ha podido confirmar el número de teléfono. Inténtelo de nuevo o póngase en contacto con el servicio de asistencia técnica",
   "api.user.WRONG_PASSWORD_FORMAT": "La contraseña debe ser una cadena",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Teléfono o contraseña incorrectos",
@@ -718,18 +723,18 @@
   "employee.emptyList.description": "Su empleador le ha bloqueado en la organización",
   "employee.emptyList.title": "Usted está bloqueado",
   "employee.isBlocked": "bloqueado",
-  "employee.reassignTickets.title": "¿A quién asignar los tickets del empleado?",
+  "employee.reassignTickets.alert.message": "Para evitar perderlos, designa un nuevo albacea entre tus empleados. No es necesario reasignar solicitudes y simplemente eliminar al empleado.",
+  "employee.reassignTickets.alert.title": "{employeeName} está asignado a varios tickets",
   "employee.reassignTickets.buttonContent.deleteUser": "Eliminar a un empleado sin reasignación",
   "employee.reassignTickets.buttonContent.reassignTickets": "Eliminar un empleado y reasignar aplicaciones",
-  "employee.reassignTickets.alert.title": "{employeeName} está asignado a varios tickets",
-  "employee.reassignTickets.alert.message": "Para evitar perderlos, designa un nuevo albacea entre tus empleados. No es necesario reasignar solicitudes y simplemente eliminar al empleado.",
-  "employee.reassignTickets.notification.title.warning": "No cierres la pestaña",
-  "employee.reassignTickets.notification.title.error": "Se produjo un error",
-  "employee.reassignTickets.notification.title.success": "Listo",
-  "employee.reassignTickets.notification.message.warning": "Reasignar solicitudes a otro empleado",
   "employee.reassignTickets.notification.message.error": "Por favor inténtalo de nuevo más tarde.",
   "employee.reassignTickets.notification.message.success": "El empleado es eliminado y sus solicitudes se reasignan a otro empleado.",
+  "employee.reassignTickets.notification.message.warning": "Reasignar solicitudes a otro empleado",
   "employee.reassignTickets.notification.progress": "Boletos reasignados: {updatedTicketsCount} de {activeTicketsOrganizationEmployeeCount}",
+  "employee.reassignTickets.notification.title.error": "Se produjo un error",
+  "employee.reassignTickets.notification.title.success": "Listo",
+  "employee.reassignTickets.notification.title.warning": "No cierres la pestaña",
+  "employee.reassignTickets.title": "¿A quién asignar los tickets del empleado?",
   "employee.role.Administrator.description": "El administrador tiene acceso total a los datos y funciones de Doma: puede borrar, crear o editar cualquier cosa. Los administradores controlan las organizaciones creadas: una organización puede tener un número ilimitado de empleados con este tipo de acceso.",
   "employee.role.Administrator.name": "Administrador",
   "employee.role.Contractor.description": "Contratista realiza trabajos sobre solicitudes asignadas. No tiene acceso a otras secciones y funcionalidades de la plataforma Doma.ai.",
@@ -1002,6 +1007,11 @@
   "field.UnitName.notFound": "Para esta comunidad plano del edificio no fue creado, por lo que no puede seleccionar una propiedad",
   "field.UnitName.notFound.link": "Dibujar plano del edificio",
   "field.UnitType": "Tipo de propiedad",
+  "field.UnitType.act.apartment": "Apartamento",
+  "field.UnitType.act.commercial": "Local comercial",
+  "field.UnitType.act.flat": "Piso",
+  "field.UnitType.act.parking": "Plaza de coche",
+  "field.UnitType.act.warehouse": "Trastero",
   "field.UnitType.apartment": "Apartamento",
   "field.UnitType.commercial": "Local",
   "field.UnitType.flat": "Piso",
@@ -1012,11 +1022,6 @@
   "field.UnitType.prefix.parking": "Plaza de coche",
   "field.UnitType.prefix.warehouse": "Trastero",
   "field.UnitType.warehouse": "Trastero",
-  "field.UnitType.act.warehouse": "Trastero",
-  "field.UnitType.act.apartment": "Apartamento",
-  "field.UnitType.act.commercial": "Local comercial",
-  "field.UnitType.act.flat": "Piso",
-  "field.UnitType.act.parking": "Plaza de coche",
   "field.email.requiredError": "Introduzca el correo electrónico",
   "field.floorName": "Planta",
   "field.required": "Este es un campo obligatorio — rellénelo",
@@ -1757,14 +1762,6 @@
   "pages.condo.error.PageTitle": "Mejorando servicio",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "No ha sido posible determinar el tipo de enlace. Quizás el enlace es incorrecto o no se ha copiado completamente.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Enlace de pago desconocido",
-  "pages.condo.marketplace.measure.perHour.full": "Precio por hora",
-  "pages.condo.marketplace.measure.perHour.short": "h",
-  "pages.condo.marketplace.measure.perItem.full": "Precio por unidad",
-  "pages.condo.marketplace.measure.perItem.short": "u",
-  "pages.condo.marketplace.measure.perMeter.full": "Precio por metro",
-  "pages.condo.marketplace.measure.perMeter.short": "m",
-  "pages.condo.marketplace.noMeasure": "Pago único",
-  "pages.condo.marketplace.marketItem.form.field.measure": "Tipo de precio",
   "pages.condo.marketplace.bankAccountErrorMessage": "Error en el número de cuenta corriente",
   "pages.condo.marketplace.bankAccountValidationErrorMassage": "La combinación de Código de identificación bancaria y número de cuenta corriente no pasó verificación. ({number}, {routingNumber})",
   "pages.condo.marketplace.bankAccountValidationErrorTitle": "Añadiendo requisitos",
@@ -1879,6 +1876,7 @@
   "pages.condo.marketplace.marketItem.form.field.description.tooltip": "Describa el servicio: qué incluye, cuánto tardará aproximadamente y cuál es la garantía del trabajo. Indique si el vecino necesita prepararse con antelación. Anote las ventajas: como tener un contrato, la experiencia del experto y lo que limpiará después.",
   "pages.condo.marketplace.marketItem.form.field.marketCategory": "Subcategoría",
   "pages.condo.marketplace.marketItem.form.field.marketItemPhoto": "Reportaje fotográfico de servicio",
+  "pages.condo.marketplace.marketItem.form.field.measure": "Tipo de precio",
   "pages.condo.marketplace.marketItem.form.field.name": "Nombre",
   "pages.condo.marketplace.marketItem.form.field.name.uniqueError": "Ya existe un servicio con este nombre",
   "pages.condo.marketplace.marketItem.form.field.parentCategory": "Categoría",
@@ -1906,6 +1904,13 @@
   "pages.condo.marketplace.marketItem.mobileAppPreview.title": "Así se ve en la aplicación móvil de Doma",
   "pages.condo.marketplace.marketItem.notFoundError.description": "El servicio con este ID no está disponible en su organización",
   "pages.condo.marketplace.marketItem.notFoundError.title": "Servicio no encontrado",
+  "pages.condo.marketplace.measure.perHour.full": "Precio por hora",
+  "pages.condo.marketplace.measure.perHour.short": "h",
+  "pages.condo.marketplace.measure.perItem.full": "Precio por unidad",
+  "pages.condo.marketplace.measure.perItem.short": "u",
+  "pages.condo.marketplace.measure.perMeter.full": "Precio por metro",
+  "pages.condo.marketplace.measure.perMeter.short": "m",
+  "pages.condo.marketplace.noMeasure": "Pago único",
   "pages.condo.marketplace.notSetup.buttonText": "Ir a configuración",
   "pages.condo.marketplace.notSetup.tag": "No configurado",
   "pages.condo.marketplace.notSetup.text": "¿Lo hacemos ahora mismo?",
