--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1443,6 +1443,12 @@
   "news.type.common": "Common",
   "news.type.emergency": "Еmergency",
   "news.update.title": "Edit news",
+  "notification.UserMessagesList.title": "Notifications",
+  "notification.UserMessagesList.viewed": "Viewed",
+  "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "About new pass tickets",
+  "notification.UserMessagesSettingModal.messageType.TICKET_COMMENT_CREATED.label": "About new ticket comments",
+  "notification.UserMessagesSettingModal.messageType.TICKET_CREATED.label": "About new tickets",
+  "notification.UserMessagesSettingModal.title": "What kind of notifications do you want to see?",
   "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Bank account creation",
