--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1443,6 +1443,12 @@
   "news.type.common": "Planificado",
   "news.type.emergency": "Incidencia",
   "news.update.title": "Editar noticia",
+  "notification.UserMessagesList.title": "Notificaciones",
+  "notification.UserMessagesList.viewed": "Visto",
+  "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "Sobre nuevos pases de acceso",
+  "notification.UserMessagesSettingModal.messageType.TICKET_COMMENT_CREATED.label": "Sobre nuevos comentarios de tickets",
+  "notification.UserMessagesSettingModal.messageType.TICKET_CREATED.label": "Sobre nuevos tickets",
+  "notification.UserMessagesSettingModal.title": "¿Qué tipo de notificaciones quieres ver?",
   "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Apertura de cuenta corriente de la comunidad",
