--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1443,6 +1443,12 @@
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.update.title": "Редактировать новость",
+  "notification.UserMessagesList.title": "Уведомления",
+  "notification.UserMessagesList.viewed": "Просмотренные",
+  "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "Об оформленных пропусках",
+  "notification.UserMessagesSettingModal.messageType.TICKET_COMMENT_CREATED.label": "О новых комментариях",
+  "notification.UserMessagesSettingModal.messageType.TICKET_CREATED.label": "О новых заявках",
+  "notification.UserMessagesSettingModal.title": "Какие уведомления показывать?",
   "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Открытие расчетного счета на дом",
