--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -719,18 +719,18 @@
   "employee.emptyList.description": "Ваш работодатель заблокировал вас в организации",
   "employee.emptyList.title": "Вы заблокированы",
   "employee.isBlocked": "заблокирован",
-  "employee.reassignTickets.title": "На кого назначить заявки сотрудника?",
+  "employee.reassignTickets.alert.message": "Чтобы не потерять их, назначьте нового исполнителя среди сотрудников. Можно не переназначать заявки и просто удалить сотрудника.",
+  "employee.reassignTickets.alert.title": "{employeeName} назначен на несколько заявок",
   "employee.reassignTickets.buttonContent.deleteUser": "Удалить сотрудника без переназначения",
   "employee.reassignTickets.buttonContent.reassignTickets": "Удалить сотрудника и переназначить заявки",
-  "employee.reassignTickets.alert.title": "{employeeName} назначен на несколько заявок",
-  "employee.reassignTickets.alert.message": "Чтобы не потерять их, назначьте нового исполнителя среди сотрудников. Можно не переназначать заявки и просто удалить сотрудника.",
-  "employee.reassignTickets.notification.title.warning": "Не закрывайте вкладку",
-  "employee.reassignTickets.notification.title.error": "Возникла ошибка",
-  "employee.reassignTickets.notification.title.success": "Готово",
-  "employee.reassignTickets.notification.message.warning": "Переназначение заявок на другого сотрудника",
   "employee.reassignTickets.notification.message.error": "Попробуйте повторить попытку позже",
   "employee.reassignTickets.notification.message.success": "Сотрудник удален, а его заявки переназначены на другого сотрудника",
+  "employee.reassignTickets.notification.message.warning": "Переназначение заявок на другого сотрудника",
   "employee.reassignTickets.notification.progress": "Переназначено заявок: {updatedTicketsCount} из {activeTicketsOrganizationEmployeeCount}",
+  "employee.reassignTickets.notification.title.error": "Возникла ошибка",
+  "employee.reassignTickets.notification.title.success": "Готово",
+  "employee.reassignTickets.notification.title.warning": "Не закрывайте вкладку",
+  "employee.reassignTickets.title": "На кого назначить заявки сотрудника?",
   "employee.role.Administrator.description": "Администратору предоставлен полный доступ к данным и функциям Домов: он может удалять, создавать или редактировать все что угодно. Администраторы контролируют созданные организации: у одной может быть неограниченное количество администраторов.",
   "employee.role.Administrator.name": "Администратор",
   "employee.role.Contractor.description": "Подрядчик выполняет работы по назначенным заявкам. У него нет доступа к другим разделам и возможностям платформы Doma.ai.",
@@ -1003,6 +1003,11 @@
   "field.UnitName.notFound": "Для этого дома не создана шахматка, поэтому вы не можете выбрать помещение",
   "field.UnitName.notFound.link": "Добавить шахматку",
   "field.UnitType": "Тип помещения",
+  "field.UnitType.act.apartment": "Апартаментов",
+  "field.UnitType.act.commercial": "Коммерческого помещения",
+  "field.UnitType.act.flat": "Квартиры",
+  "field.UnitType.act.parking": "Машиноместа",
+  "field.UnitType.act.warehouse": "Кладовой",
   "field.UnitType.apartment": "Апартаменты",
   "field.UnitType.commercial": "Коммерческое помещение",
   "field.UnitType.flat": "Квартира",
@@ -1013,11 +1018,6 @@
   "field.UnitType.prefix.parking": "ММ",
   "field.UnitType.prefix.warehouse": "КЛ",
   "field.UnitType.warehouse": "Кладовая",
-  "field.UnitType.act.warehouse": "Кладовой",
-  "field.UnitType.act.apartment": "Апартаментов",
-  "field.UnitType.act.commercial": "Коммерческого помещения",
-  "field.UnitType.act.flat": "Квартиры",
-  "field.UnitType.act.parking": "Машиноместа",
   "field.email.requiredError": "Укажите email",
   "field.floorName": "Этаж",
   "field.required": "Это обязательное поле — заполните его",
@@ -1431,8 +1431,14 @@
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.update.title": "Редактировать новость",
-  "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
+  "notification.UserMessagesList.title": "Уведомления",
+  "notification.UserMessagesList.viewed": "Просмотренные",
+  "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "Об оформленных пропусках",
+  "notification.UserMessagesSettingModal.messageType.TICKET_COMMENT_CREATED.label": "О новых комментариях",
+  "notification.UserMessagesSettingModal.messageType.TICKET_CREATED.label": "О новых заявках",
+  "notification.UserMessagesSettingModal.title": "Какие уведомления показывать?",
   "notification.messages.B2B_APP_MESSAGE_PUSH.push.title": "{title}",
+  "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.subject": "Открытие расчетного счета на дом",
   "notification.messages.BANK_ACCOUNT_CREATION_REQUEST.email.title": "Новая заявка на открытие счета в Сбере",
   "notification.messages.BILLING_RECEIPT_ADDED.email.subject": "Вам квитанция!",
@@ -1759,14 +1765,6 @@
   "pages.condo.error.PageTitle": "Улучшаем сервис",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Не удалось определить тип ссылки. Возможно ссылка неверная или скопирована не полностью.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Неизвестная ссылка на оплату",
-  "pages.condo.marketplace.measure.perHour.full": "По часам",
-  "pages.condo.marketplace.measure.perHour.short": "ч",
-  "pages.condo.marketplace.measure.perItem.full": "Поштучная",
-  "pages.condo.marketplace.measure.perItem.short": "шт",
-  "pages.condo.marketplace.measure.perMeter.full": "За метр",
-  "pages.condo.marketplace.measure.perMeter.short": "м",
-  "pages.condo.marketplace.noMeasure": "Разовая работа",
-  "pages.condo.marketplace.marketItem.form.field.measure": "Оплата",
   "pages.condo.marketplace.bankAccountErrorMessage": "Ошибка в номере расчетного счета",
   "pages.condo.marketplace.bankAccountValidationErrorMassage": "Комбинация БИК и номер расчетного счета не прошли проверку. ({number}, {routingNumber})",
   "pages.condo.marketplace.bankAccountValidationErrorTitle": "Добавление реквизитов",
@@ -1881,6 +1879,7 @@
   "pages.condo.marketplace.marketItem.form.field.description.tooltip": "Опишите услугу: что в нее входит, сколько примерно времени займет и какая гарантия на работы. Обозначьте, если жителю нужно подготовиться заранее. Отметьте преимущества — например, наличие договора, опыт мастера и что он уберет за собой.",
   "pages.condo.marketplace.marketItem.form.field.marketCategory": "Подкатегория",
   "pages.condo.marketplace.marketItem.form.field.marketItemPhoto": "Фото",
+  "pages.condo.marketplace.marketItem.form.field.measure": "Оплата",
   "pages.condo.marketplace.marketItem.form.field.name": "Название",
   "pages.condo.marketplace.marketItem.form.field.name.uniqueError": "Услуга с таким названием уже есть",
   "pages.condo.marketplace.marketItem.form.field.parentCategory": "Категория",
@@ -1908,6 +1907,13 @@
   "pages.condo.marketplace.marketItem.mobileAppPreview.title": "Так это выглядит в мобильном приложении Doma",
   "pages.condo.marketplace.marketItem.notFoundError.description": "Услуги с данным ID нет в вашей организации",
   "pages.condo.marketplace.marketItem.notFoundError.title": "Услуга не найдена",
+  "pages.condo.marketplace.measure.perHour.full": "По часам",
+  "pages.condo.marketplace.measure.perHour.short": "ч",
+  "pages.condo.marketplace.measure.perItem.full": "Поштучная",
+  "pages.condo.marketplace.measure.perItem.short": "шт",
+  "pages.condo.marketplace.measure.perMeter.full": "За метр",
+  "pages.condo.marketplace.measure.perMeter.short": "м",
+  "pages.condo.marketplace.noMeasure": "Разовая работа",
   "pages.condo.marketplace.notSetup.buttonText": "Перейти к настройке",
   "pages.condo.marketplace.notSetup.tag": "Не настроен",
   "pages.condo.marketplace.notSetup.text": "Сделаем это прямо сейчас?",
