--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2012,7 +2012,7 @@
   "pages.condo.meter.Meter.putOutOfOrder": "Вывести",
   "pages.condo.meter.MeterDataTitle": "Данные приборов учета",
   "pages.condo.meter.MeterInfo": "Информация о приборе",
-  "pages.condo.meter.MeterNumber": "Номер прибора учета",
+  "pages.condo.meter.MeterNumber": "Номер ПУ",
   "pages.condo.meter.MeterPlace": "Место установки счетчика",
   "pages.condo.meter.MeterReading": "Показание",
   "pages.condo.meter.MeterReading.CountSelectedReadings": "Выбрано элементов",
@@ -2058,6 +2058,7 @@
   "pages.condo.meter.create.AddMeterTourStepTitle": "Приборы учета для этого помещения еще не добавлены",
   "pages.condo.meter.create.LastReading": "Предыдущие показания",
   "pages.condo.meter.create.MeterReadings": "Показания",
+  "pages.condo.meter.create.Date": "Дата снятия",
   "pages.condo.meter.create.MetersAndReadings": "Приборы учета и показания",
   "pages.condo.meter.create.meterReadingTourStepTitle": "Введите показание, которое хотите передать",
   "pages.condo.meter.create.resourceOwnedByAnotherOrganization": "Этот ресурс больше не принадлежит этой УК. Пожалуйста, обратитесь в техподдержку",
