fix(condo): DOMA-10948 added more generic default text to not resident tab in contacts editor component

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -646,6 +646,7 @@
   "contact.ConfirmDeleteMessage": "This contact will be deleted forever",
   "contact.ConfirmDeleteTitle": "Delete contact?",
   "contact.Contact.ContactsEditor.AddNewContact": "New contact",
+  "contact.Contact.ContactsEditor.NotResident": "Not a resident",
   "contact.Contact.ContactsEditor.AnotherContact": "Another contact",
   "contact.Contact.ContactsEditor.Name": "Name",
   "contact.Contact.ContactsEditor.Name.placeholder": "Full name",
