feat(condo): DOMA-10948 added date input to meter readings form (#5696)
* feat(condo): DOMA-10948 added date input to meter readings form

* fix(condo): DOMA-10948 calculate wrong number of values only including tariffNumber keys

* fix(condo): DOMA-10948 don't show tabs in contacts editor if there is only one tab

* fix(condo): DOMA-10948 don't show contacts info if address is not selcted

* fix(condo): DOMA-10948 added last reading date to placeholder and review fixes

* fix(condo): DOMA-10948 added more generic default text to not resident tab in contacts editor component

* fix(condo): DOMA-10948 get rid of lodash/get where possible

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -647,6 +647,7 @@
   "contact.ConfirmDeleteMessage": "Todos los datos sobre el vecino se borrarán de forma permanente",
   "contact.ConfirmDeleteTitle": "Eliminar vecino?",
   "contact.Contact.ContactsEditor.AddNewContact": "Nuevo contacto",
+  "contact.Contact.ContactsEditor.NotResident": "No residente",
   "contact.Contact.ContactsEditor.AnotherContact": "Otro contacto",
   "contact.Contact.ContactsEditor.Name": "Nombre completo",
   "contact.Contact.ContactsEditor.Name.placeholder": "Nombre completo",
@@ -2059,6 +2060,7 @@
   "pages.condo.meter.create.AddMeterTourStepTitle": "Todavía no se han añadido dispositivos de medición para esta propiedad",
   "pages.condo.meter.create.LastReading": "Lecturas anteriores",
   "pages.condo.meter.create.MeterReadings": "Lecturas",
+  "pages.condo.meter.create.Date": "Fecha de depósito",
   "pages.condo.meter.create.MetersAndReadings": "Dispositivos de medición y lecturas",
   "pages.condo.meter.create.meterReadingTourStepTitle": "Introduzca la lectura que desea transmitir",
   "pages.condo.meter.create.resourceOwnedByAnotherOrganization": "Este recurso ya no es propiedad de este Administrador. Póngase en contacto con el servicio técnico",
