--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -647,6 +647,7 @@
   "contact.ConfirmDeleteMessage": "Все данные о жителе сотрутся навсегда",
   "contact.ConfirmDeleteTitle": "Удалить жителя?",
   "contact.Contact.ContactsEditor.AddNewContact": "Новый контакт",
+  "contact.Contact.ContactsEditor.NotResident": "Не житель",
   "contact.Contact.ContactsEditor.AnotherContact": "Другой контакт",
   "contact.Contact.ContactsEditor.Name": "ФИО",
   "contact.Contact.ContactsEditor.Name.placeholder": "Фамилия Имя Отчество",
@@ -2013,7 +2014,7 @@
   "pages.condo.meter.Meter.putOutOfOrder": "Вывести",
   "pages.condo.meter.MeterDataTitle": "Данные приборов учета",
   "pages.condo.meter.MeterInfo": "Информация о приборе",
-  "pages.condo.meter.MeterNumber": "Номер прибора учета",
+  "pages.condo.meter.MeterNumber": "Номер ПУ",
   "pages.condo.meter.MeterPlace": "Место установки счетчика",
   "pages.condo.meter.MeterReading": "Показание",
   "pages.condo.meter.MeterReading.CountSelectedReadings": "Выбрано элементов",
@@ -2059,6 +2060,7 @@
   "pages.condo.meter.create.AddMeterTourStepTitle": "Приборы учета для этого помещения еще не добавлены",
   "pages.condo.meter.create.LastReading": "Предыдущие показания",
   "pages.condo.meter.create.MeterReadings": "Показания",
+  "pages.condo.meter.create.Date": "Дата снятия",
   "pages.condo.meter.create.MetersAndReadings": "Приборы учета и показания",
   "pages.condo.meter.create.meterReadingTourStepTitle": "Введите показание, которое хотите передать",
   "pages.condo.meter.create.resourceOwnedByAnotherOrganization": "Этот ресурс больше не принадлежит этой УК. Пожалуйста, обратитесь в техподдержку",
