feat(condo): DOMA-10687 added usePollUserMessages hook

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1443,6 +1443,9 @@
   "news.type.common": "Common",
   "news.type.emergency": "Еmergency",
   "news.update.title": "Edit news",
+  "notification.UserMessagesList.message.PASS_TICKET_CREATED.label": "New pass ticket",
+  "notification.UserMessagesList.message.TICKET_COMMENT_CREATED.label": "New ticket comment",
+  "notification.UserMessagesList.message.TICKET_CREATED.label": "New ticket",
   "notification.UserMessagesList.title": "Notifications",
   "notification.UserMessagesList.viewed": "Viewed",
   "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "About new pass tickets",
