--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1443,6 +1443,9 @@
   "news.type.common": "Planificado",
   "news.type.emergency": "Incidencia",
   "news.update.title": "Editar noticia",
+  "notification.UserMessagesList.message.PASS_TICKET_CREATED.label": "Nuevo pase de entrada",
+  "notification.UserMessagesList.message.TICKET_COMMENT_CREATED.label": "Nuevo comentario de ticket",
+  "notification.UserMessagesList.message.TICKET_CREATED.label": "Nuevo ticket",
   "notification.UserMessagesList.title": "Notificaciones",
   "notification.UserMessagesList.viewed": "Visto",
   "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "Sobre nuevos pases de acceso",
