--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1443,6 +1443,9 @@
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.update.title": "Редактировать новость",
+  "notification.UserMessagesList.message.PASS_TICKET_CREATED.label": "Оформлен пропуск",
+  "notification.UserMessagesList.message.TICKET_COMMENT_CREATED.label": "Новый комментарий",
+  "notification.UserMessagesList.message.TICKET_CREATED.label": "Новая заявка",
   "notification.UserMessagesList.title": "Уведомления",
   "notification.UserMessagesList.viewed": "Просмотренные",
   "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "Об оформленных пропусках",
