fix(condo): DOMA-10610 fix text in modal

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1109,11 +1109,10 @@
   "import.callbackModal.phoneLabel": "Phone number",
   "import.callbackModal.submitButtonLabel": "The number is correct – call",
   "import.callbackModal.title": "Check phone number",
-  "import.contact.genitive": "Contacts",
-  "import.contact.isVerifiedCheckbox.title": "Verify contacts",
-  "import.contact.isVerifiedCheckbox.tooltip.title": "Verified contacts can use services in the mobile app",
+  "import.contact.genitive": "residents",
+  "import.contact.isVerifiedCheckbox.title": "Automatically verify residents",
+  "import.contact.isVerifiedCheckbox.tooltip.title": "Verified contacts can use services in the mobile application. For example, they can leave a request for a pass.",
   "import.contact.plural": "Contacts",
-  "import.contact.prepositional": "Contacts",
   "import.contact.requiredFields": "Enter address, unit number, unit type, phone and name",
   "import.errorModal.title": "{plural} could not download",
   "import.fileImportHelpModal.alert.description": "The manager will add the information manually. We will call and let you know when everything is ready.",
@@ -1131,9 +1130,8 @@
   "import.helpModal.readInstruction.title": "Read the instructions",
   "import.helpModal.title": "We will help",
   "import.meter.genitive": "Meter readings",
-  "import.meter.plural": "Meters",
-  "import.meter.prepositional": "Meter readings",
-  "import.meter.requiredFields": "Specify address, unit and its type, account number, meter type, number of tariffs and date of transmission of the meter readings",
+  "import.meter.plural": "Meters and readings",
+  "import.meter.requiredFields": "Specify address, premises and its type, personal account number, meter type, meter number, number of tariffs and date of transmission of readings",
   "import.meterReading.plural": "Meter readings",
   "import.partlyDataLoadedModal.alert.description": "You can try to add or create a table from this data and try to download again",
   "import.partlyDataLoadedModal.alert.message": "It has become possible to add {success} of {total} {genitive}",
@@ -1143,19 +1141,17 @@
   "import.progressModal.title": "Data loading",
   "import.property.genitive": "Properties",
   "import.property.plural": "Properties",
-  "import.property.prepositional": "Properties",
   "import.property.requiredFields": "Specify the address and number of units, entrances and floors",
   "import.successModal.buttonLabel": "Continue",
   "import.successModal.title": "Everything worked out - data downloaded",
   "import.ticket.genitive": "Tickets",
   "import.ticket.plural": "Tickets",
-  "import.ticket.prepositional": "Tickets",
   "import.ticket.requiredFields": "Enter the address and describe the problem",
   "import.uploadButtonLabel": "Import list from file",
   "import.uploadModal.chooseAnotherFileForUpload": "Select another file to download",
   "import.uploadModal.chooseFileForUpload": "Select file to download",
   "import.uploadModal.exampleLinkMessage": "{genitive} list template.xlsx",
-  "import.uploadModal.message": "Download the file with {prepositional} information or use the template",
+  "import.uploadModal.message": "To do this, download the template, enter the information into a file and upload it to the platform",
   "import.uploadModal.needHelp": "Need help",
   "import.uploadModal.requiredFields.title": "Fill in the required fields",
   "import.uploadModal.title": "Add {plural} to the platform",
