--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1109,11 +1109,10 @@
   "import.callbackModal.phoneLabel": "Número de teléfono",
   "import.callbackModal.submitButtonLabel": "El número es correcto - puede llamar",
   "import.callbackModal.title": "Asegúrese de que su número de teléfono sea correcto",
-  "import.contact.genitive": "Contactos de vecinos",
-  "import.contact.isVerifiedCheckbox.title": "Verificar contactos",
-  "import.contact.isVerifiedCheckbox.tooltip.title": "Los contactos verificados pueden utilizar los servicios de la aplicación móvil",
+  "import.contact.genitive": "residentes",
+  "import.contact.isVerifiedCheckbox.title": "Verificación automática de residentes",
+  "import.contact.isVerifiedCheckbox.tooltip.title": "Los contactos verificados pueden utilizar los servicios de la aplicación móvil. Por ejemplo, pueden dejar una solicitud de pase.",
   "import.contact.plural": "Contactos de vecinos",
-  "import.contact.prepositional": "Contactos de vecinos",
   "import.contact.requiredFields": "Introduzca la dirección, el número de propiedad, su tipo, número de teléfono y nombre completo",
   "import.errorModal.title": "{plural} fallo al cargar",
   "import.fileImportHelpModal.alert.description": "Un especialista de soporte añadirá la información manualmente. Le llamaremos y le avisaremos cuando esté listo.",
@@ -1132,7 +1131,6 @@
   "import.helpModal.title": "Le ayudamos ahora mismo",
   "import.meter.genitive": "lectura",
   "import.meter.plural": "Lectura",
-  "import.meter.prepositional": "lectura",
   "import.meter.requiredFields": "Introduzca la dirección, la propiedad y su tipo, el número de cuenta personal, el tipo de contador, el número de tarifas y la fecha de transmisión de las lecturas",
   "import.meterReading.plural": "lectura",
   "import.partlyDataLoadedModal.alert.description": "Los datos no cargados se puede añadir manualmente o generar una tabla de ellos e intentar cargarla de nuevo",
@@ -1143,19 +1141,17 @@
   "import.progressModal.title": "Cargando datos",
   "import.property.genitive": "Comunidades",
   "import.property.plural": "Comunidades",
-  "import.property.prepositional": "Comunidades",
   "import.property.requiredFields": "Introduzca la dirección y el número de propiedades, portales y plantas",
   "import.successModal.buttonLabel": "Continuar",
   "import.successModal.title": "Datos se han cargado con éxito",
   "import.ticket.genitive": "Solicitudes",
   "import.ticket.plural": "Solicitudes",
-  "import.ticket.prepositional": "Solicitudes",
   "import.ticket.requiredFields": "Introduzca la dirección y describa el problema",
   "import.uploadButtonLabel": "Importar lista desde archivo",
   "import.uploadModal.chooseAnotherFileForUpload": "Elija otro archivo para cargar",
   "import.uploadModal.chooseFileForUpload": "Elegir un archivo para subir",
   "import.uploadModal.exampleLinkMessage": "Plantilla de lista {genitive}.xlsx",
-  "import.uploadModal.message": "Suba su archivo con información sobre {prepositional} o utilice la plantilla",
+  "import.uploadModal.message": "Para ello, descargue la plantilla, introduzca la información en un archivo y súbalo a la plataforma",
   "import.uploadModal.needHelp": "Necesito ayuda",
   "import.uploadModal.requiredFields.title": "Rellene los campos obligatorios",
   "import.uploadModal.title": "Añadir {plural} a plataforma",
